--- a/app/src/main/res/layout/activity_class_edit.xml
+++ b/app/src/main/res/layout/activity_class_edit.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/coordinatorLayout"
-    tools:context="com.uts.andy.RegSystem.view.EntryActivity">
+    tools:context="com.uts.andy.RegSystem.view.ClassEditActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,8 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_entry"
-        android:id="@+id/include" />
+    <include layout="@layout/content_class_edit" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -30,17 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:visibility="gone"
         app:srcCompat="@android:drawable/ic_dialog_email" />
-
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:visibility="gone"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="center_vertical|center_horizontal" />
 
 </android.support.design.widget.CoordinatorLayout>
