--- a/app/src/main/res/layout/fragment_admin_class_manager.xml
+++ b/app/src/main/res/layout/fragment_admin_class_manager.xml
@@ -11,7 +11,8 @@
         android:id="@+id/Admin_classList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/fui_buttonShadow" />
+        android:background="@color/fui_buttonShadow"
+        android:visibility="invisible" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -19,6 +20,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:visibility="invisible"
         app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
