--- a/app/src/main/res/layout/fragment_admin_function_two.xml
+++ b/app/src/main/res/layout/fragment_admin_function_two.xml
@@ -5,17 +5,19 @@
     android:layout_height="match_parent"
     tools:context="com.uts.andy.RegSystem.Fragments.AdminFunctionTwoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <!--<TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="this is function 2" />-->
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recruiter_list"
+        android:id="@+id/user_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/fui_buttonShadow"
+        android:visibility="invisible" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -23,5 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:visibility="invisible"
         app:srcCompat="@android:drawable/ic_menu_edit" />
+
+
 </FrameLayout>
