--- a/app/src/main/res/menu/menu_admin_drawer.xml
+++ b/app/src/main/res/menu/menu_admin_drawer.xml
@@ -4,13 +4,13 @@
         <item
             android:id="@+id/nav_function1"
 
-            android:title="function1" />
+            android:title="Announcement Manager" />
         <item
-            android:id="@+id/nav_function2"
+            android:id="@+id/nav_userManager"
 
-            android:title="function2" />
+            android:title="User Manager" />
         <item
-            android:id="@+id/nav_function3"
+            android:id="@+id/nav_classManager"
 
             android:title="Class Manager" />
 
