--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/coordinatorLayout"
-    tools:context="com.uts.andy.RegSystem.view.EntryActivity">
+    tools:context="com.uts.iamjinqianyu.RegSystem.view.EntryActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
