--- a/app/src/main/res/layout/content_class_edit.xml
+++ b/app/src/main/res/layout/content_class_edit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.uts.andy.RegSystem.view.ClassEditActivity"
+    tools:context="com.uts.iamjinqianyu.RegSystem.view.ClassEditActivity"
     tools:showIn="@layout/activity_class_edit"
     android:padding="16dp">
 
