--- a/app/src/main/res/layout/content_entry.xml
+++ b/app/src/main/res/layout/content_entry.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.uts.andy.RegSystem.view.EntryActivity"
+    tools:context="com.uts.iamjinqianyu.RegSystem.view.EntryActivity"
     tools:showIn="@layout/activity_entry">
 
     <TextView
