--- a/app/src/main/res/layout/content_student.xml
+++ b/app/src/main/res/layout/content_student.xml
@@ -5,7 +5,7 @@
     android:id="@+id/content_student"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uts.andy.RegSystem.view.StudentActivity"
+    tools:context="com.uts.iamjinqianyu.RegSystem.view.StudentActivity"
     tools:showIn="@layout/activity_student">
 
     <android.support.design.widget.AppBarLayout
