--- a/app/src/main/res/layout/fragment_student_one.xml
+++ b/app/src/main/res/layout/fragment_student_one.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uts.andy.RegSystem.Fragments.StudentOneFragment">
+    tools:context="com.uts.iamjinqianyu.RegSystem.Fragments.StudentOneFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
