--- a/app/src/main/res/layout/fragment_student_two.xml
+++ b/app/src/main/res/layout/fragment_student_two.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fui_buttonShadow"
-    tools:context="com.uts.iamjinqianyu.RegSystem.Fragments.StudentTwoFragment">
+    tools:context="com.uts.iamjinqianyu.regSystem.fragments.StudentTwoFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/classList"
@@ -17,5 +17,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
+
+    <TextView
+        android:id="@+id/NoClassTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No Class Available"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:visibility="gone" />
 
 </RelativeLayout>
