--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout_student"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uts.iamjinqianyu.RegSystem.view.StudentActivity"
+    tools:context="com.uts.iamjinqianyu.regSystem.view.StudentActivity"
     tools:openDrawer="start">
 
     <include
