--- a/app/src/main/res/layout/fragment_admin_function_two.xml
+++ b/app/src/main/res/layout/fragment_admin_function_two.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uts.iamjinqianyu.RegSystem.Fragments.AdminFunctionTwoFragment">
+    tools:context="com.uts.iamjinqianyu.regSystem.fragments.AdminFunctionTwoFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
