--- a/app/src/main/res/layout/item_class_list.xml
+++ b/app/src/main/res/layout/item_class_list.xml
@@ -9,9 +9,12 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
+
+
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:padding="16dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,6 +50,17 @@
                 android:textSize="18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/className" />
+
+            <ImageView
+                android:id="@+id/imageView_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginRight="16dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:srcCompat="@drawable/ic_toggle_star_outline_24" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
