--- a/app/src/main/res/layout/fragment_student_one.xml
+++ b/app/src/main/res/layout/fragment_student_one.xml
@@ -4,10 +4,47 @@
     android:layout_height="match_parent"
     tools:context="com.uts.iamjinqianyu.regSystem.fragments.StudentOneFragment">
 
+    <TextView
+        android:id="@+id/announcement"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Announcement"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/announcementContent_TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/announcement"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="casual"
+        android:text="No announcement" />
+
+    <TextView
+        android:id="@+id/textView_myClass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/announcementContent_TextView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:text="My Class"
+        android:textSize="18sp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/textView_myClass"
+        android:layout_marginTop="8dp" />
 </RelativeLayout>
