--- a/SEP/app/src/main/res/layout/activity_main.xml
+++ b/SEP/app/src/main/res/layout/activity_main.xml
@@ -135,4 +135,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:text="Forgot password?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fPW"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_below="@+id/PasswordField"
+        android:layout_alignStart="@+id/signUp" />
+
 </RelativeLayout>
