--- a/SEP-RegSystem-Wode/app/src/main/res/layout/item_survey_list.xml
+++ b/SEP-RegSystem-Wode/app/src/main/res/layout/item_survey_list.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/className"
+            android:id="@+id/surveyID"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginLeft="16dp"
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/classSize"
+            android:id="@+id/applicant"
             android:layout_width="0dp"
             android:layout_height="24dp"
             android:layout_marginLeft="16dp"
@@ -40,16 +40,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/surveyID" />
 
-        <ImageView
-            android:id="@+id/imageView_star"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@drawable/ic_toggle_star_outline_24" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
